# fpl-intelligence

./: .gitignore  README.md  phase-m10-team-fixture-forecast.md  phase-m7-component-projection.md  phase-m8-2-fixture-horizon-scenario.md  phase-m8-3-chip-specific-valuation.md  phase-m8-4-beam-search.md  phase-m8-5-live-api-alignment.md  phase-m8-6-beam-correctness-and-valuation.md  phase-m8-chip-aware-benchmark.md  phase-m9-availability-minutes-role.md  pyproject.toml  requirements.txt
api/: __init__.py  chip_recommendations.py  chip_signals.py  chip_tracking.py  data_service.py  fpl_client.py  main.py  player_signals.py
api/routers/: __init__.py  backtest.py  chips.py  fixtures.py  fpl_live.py  planner.py  players.py  predictions.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/lib/: api.ts  (+5 more)
tests/: test_api.py  test_availability.py  test_backtest_transfer_strategy.py  test_beam_search.py  test_chip_recommendations.py  test_chip_signals.py  test_chip_simulation.py  test_chip_tracking.py  test_component_projection.py  test_dashboard_data_loader.py  test_fetch_fpl.py  test_fixture_scenarios.py  test_historical_data.py  test_model_ablation.py  test_model_ablation_m3.py  test_multi_gw_projection.py  test_player_signals.py  test_projection_distributions.py  test_rank_players.py  test_season_benchmark.py  test_season_rules.py  test_squad_optimizer.py  test_step4_models.py  test_step5_model_comparison.py  test_step6_backtest.py  test_step7_evaluation.py  test_team_forecast.py
(+58 files in other folders)
