[project]
name = "fpl-intelligence"
version = "0.1.0"
description = "Fantasy Premier League analytics, captaincy, and transfer intelligence."
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.4.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "httpx", "streamlit"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "api", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
